--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,14 +1,14 @@
 create-employee:
     path: /api/create-employee
-    controller: App\Application\Api\Action\CreateEmployeeAction
+    controller: App\Ui\Api\Action\CreateEmployeeAction
     methods: POST
 
 add-delegation:
     path: /api/add-delegation
-    controller: App\Application\Api\Action\AddDelegationAction
+    controller: App\Ui\Api\Action\AddDelegationAction
     methods: POST
 
 delegations-list:
     path: /api/delegations-list/{id}
-    controller: App\Application\Api\Action\DelegationsListAction
+    controller: App\Ui\Api\Action\DelegationsListAction
     methods: GET
