--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.10",
@@ -70,6 +70,9 @@
         }
     },
     "require-dev": {
+        "phpmd/phpmd": "@stable",
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/maker-bundle": "^1.49"
     }
 }
