--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.24",
         "symfony/amqp-messenger": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
@@ -17,7 +19,11 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/intl": "7.0.*",
         "symfony/messenger": "7.0.*",
+        "symfony/property-access": "7.0.*",
+        "symfony/property-info": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/serializer": "7.0.*",
+        "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
     "config": {
@@ -69,9 +75,15 @@
         }
     },
     "require-dev": {
+        "mockery/mockery": "^1.6",
         "phpmd/phpmd": "@stable",
         "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.5",
+        "qossmic/deptrac-shim": "^1.0",
         "squizlabs/php_codesniffer": "3.*",
-        "symfony/maker-bundle": "^1.49"
+        "symfony/browser-kit": "7.0.*",
+        "symfony/css-selector": "7.0.*",
+        "symfony/maker-bundle": "^1.49",
+        "symfony/phpunit-bridge": "^7.0"
     }
 }
