--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -7,9 +7,9 @@ framework:
         # The data in this cache should persist between deploys.
         # Other options include:
 
-        # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
+        # # Redis
+        # app: cache.adapter.redis
+        # default_redis_provider: redis://admin@localhost:6379
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
