--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,13 +1,18 @@
 server {
     listen 80;
     root /var/www/public;
+
     location / {
         try_files $uri /index.php$is_args$args;
     }
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
     }
+
+    access_log /var/www/var/nginx-access.log;
+    error_log /var/www/var/nginx-error.log;
 }
